.k8s/menu-deployment.yaml
---
# file: practice/2.application-abstractions/3.deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu-deployment
spec:
  replicas: 2 #после настройки hpa удалить
  selector:
    matchLabels:
      app: menu
  template:
    metadata:
      labels:
        app: menu
    spec:
      containers:
      - image: menuapp_image:dev
        name: menu
        envFrom: # указываем конфиг мап
        - configMapRef:
            name: menu-configmap
        ports:
        - containerPort: 80
        resources: #очень желательно
          requests: #сколько как мы ожидаем(может вылезти) будет использовать, нужно для раскидывания подов по нодам
            cpu: 1000m
            memory: 1000Mi
          limits: #если полезет выше, перезапустит контейнер
            cpu: 2000m
            memory: 2000Mi
...
