.k8s/menu-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: menu-service-np
spec:
  ports:
  - name: http #ingress  dont work but service is
    port: 80
    targetPort: 80
  selector:
    app: menu
  type: NodePort
