.k8s/menu-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: menu-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: menu-zsuz.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: menu-service-np # по сервису возьмет поды и будет отправлять трафик сразу на них
            port:
              number: 80
